--- a/index.html
+++ b/index.html
@@ -5,70 +5,126 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Fluent Design from MDB</title>
+  <title>علمـــــگراف</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <!-- Fluent Design Bootstrap -->
   <link rel="stylesheet" href="./css/fluent.css">
   <!-- Micon icons-->
   <link rel="stylesheet" href="./css/micon.min.css">
-  <!--Custom style -->
-  <style>
-    /* Delete it if you don't want to have black/white colors and forced font-weight */
-
-    body {
-      background-color: #000;
-      color: #fff;
-    }
-
-    .font-weight-bold {
-      font-weight: 600 !important;
-    }
-
-    h5,
-    p {
-      font-weight: 400;
-    }
-  </style>
-
+  <!-- Custom Styles-->
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
   <!-- Start your project here-->
 
-  <div class="flex-center welcome">
 
-    <svg class="svg-wrapper" height="300" width="650" xmlns="http://www.w3.org/2000/svg">
-      <rect class="shape" height="300" width="650" />
-    </svg>
+  <!--Main Navigation-->
+  <header class="my-5">
 
-    <div style="height: 100vh">
-      <div class="flex-center flex-column ">
-        <h1 class="mb-4 text-right">
-          <span class="text-info font-weight-bold">Fluent Design</span> from MDB</h1>
-        <div class="jump">
-          <div class="scale">
-            <div class="cube">
-              <div class="face"></div>
-              <div class="face"></div>
-              <div class="face"></div>
-              <div class="face"></div>
-            </div>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid px-8">
+        <a class="navbar-brand" href="#"><h2><strong>علمـــــگراف</strong></h2></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="#">خدمات</a>
+            </li>
+            <li class="nav-item mx-3">
+              <a class="nav-link" href="#">راهکار ها</a>
+            </li>
+            <li class="nav-item mx-3 active">
+              <a class="nav-link border border-light rounded" href="#">تماس با ما <!--<span class="sr-only">(current)</span>--></a>
+            </li>
+          </ul>
         </div>
+      </div>
+    </nav>
 
-        <h5 class="mb-3">Thank you for using our product. We're glad you're with us.</h5>
-
-        <p class="text-light">MDB Team</p>
-        <a href="https://mdbootstrap.com/">
-          <button class="btn btn-welcome">MDB website</button>
-        </a>
-
+    <div class="container-fluid px-8 flex-center">
+      <div class="text-center wow fadeInUp d-flex flex-column align-items-center">
+        <img class="img-fluid w-60" src="https://cdn.discordapp.com/attachments/441682651880095745/533031119420129280/strategy-img.png" alt="elmgraph" />
+        <div class="w-100"></div>
+        <h1>قدرت جادوی ارتباطات</h1>
+        <br>
+        <p class="font-size-medium mw-60">ما قدرت جادوی ارتباطات را به کار میگیریم و با قطاری از واژگان، شما را به ایستگاه موفقیت میرسانیم.</p>
       </div>
     </div>
 
-  </div>
+  </header>
+  <!--Main Navigation-->
+
+  <!--Main Layout-->
+  <main class="text-right py-5 mt-3">
+
+    <div class="container-fluid px-15 clearfix">
+
+      <div class="row align-items-stretch my-10">
+        <div class="col-12 col-lg-7">
+          <div class="w-100 d-flex my-4">
+            <img class="d-flex ml-3 align-self-stretch" src="./assest/connection-img.png" alt="Generic placeholder image">
+            <h2 class="mt-0 d-inline-block align-self-center font-weight-bold">اطلاعات یکپارچه</h2>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="row no-gutters">
+            <div class="col-12 col-lg-7">
+              <p class="font-size-medium text-justify">
+                  ارسال پیام توسط فرستنده و دریافت آن توسط گیرنده ساده‌ترین مفهوم ارتباط است. شاه کلید برقراری ارتباطی موفق ارسال پیام بصورت منسجم و یکپارچه است…
+                  
+                  <br /><br />
+    
+                  شما با یکپارچه ساختن بخش‌های مختلف ارتباطی خود، بنایی مستحکم و منسجم را در پیام‌هایی که مخابره می‌کنید می‌سازید و برای مدتی طولانی این پیام را در ذهن مخاطبان و مشتریان نهادینه می‌کنید.
+                  تدوین استراتژی پلن یکپارچه سازی ارتباطات؛ یکی از خدمات ما به شماست که ارتباطات سازمانی، بازاریابی و رسانه ای شما را پوشش می‌دهد.
+              </p>
+            </div>
+            <div class="col-12 col-lg-5 p-4 text-center">
+              <img class="h-100" src="https://mdbootstrap.com/img/Photos/Others/placeholder1.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row flex-row-reverse align-items-stretch my-10">
+        <div class="col-12 col-lg-7">
+          <div class="w-100 d-flex my-4">
+            <img class="d-flex ml-3 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">
+            <h2 class="mt-0 d-inline-block align-self-center font-weight-bold">استراتژی محتوای هوشمند</h2>
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="row no-gutters">
+            <div class="col-12 col-lg-7 order-2">
+              <p class="font-size-medium text-justify">
+                  ترسیم نقشه سرزمین پادشاهی برند شما با تار و پودی از جنس کلمات از جمله اقدامات علمگراف است.                  
+
+                  <br /><br />
+
+                  در ابتدای فعالیت، تیم رصد و مانیتورنیگ ما به بررسی و تحلیل برند شما می پردازد و با در نظر گرفتن تمام جوانب و اهداف مدنظرتان و بهره‌گیری از توان تیم ایده‌پردازی علمگراف نسبت به طراحی استراتژی پلن محتوایی منحصر به ساختار ارتباطی مجموعه شما اقدام می کند.
+              </p>
+            </div>
+            <div class="col-12 col-lg-5 p-4 order-1 text-center">
+              <img class="h-100" src="https://mdbootstrap.com/img/Photos/Others/placeholder1.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-100 py-0 my-5">
+        <h3 class="my-0">خدمات ما</h3>
+      </div>
+
+    </div>
+
+  </main>
+  <!--Main Layout-->
+
   <!-- /Start your project here-->
 
   <!-- Scripts -->
