--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="container-fluid flex-center py-5 mt-5 main-title">
       <div class="text-center wow fadeInUp d-flex flex-column align-items-center">
-        <img class="img-responsive" src="./assest/footer/logo.png" alt="elmgraph" />
+        <img class="img-responsive" src="./assest/big-logo.png" alt="elmgraph" />
         <div class="w-100"></div>
         <h1>قدرت جادوی ارتباطات</h1>
         <br>
@@ -59,7 +59,7 @@
   <!--Main Navigation-->
 
   <!--Main Layout-->
-  <main class="text-right py-5 mt-3 p-relative">
+  <main class="text-right py-5 mt-3 p-relative top-section">
     <div class="container clearfix">
       <div class="row align-items-stretch my-10" id="solutions">
         <div class="blue-glue">
@@ -74,7 +74,7 @@
         <div class="w-100"></div>
         <div class="row no-gutters">
           <div class="col-12 col-lg-5 p-3 order-lg-2 text-center">
-            <img class="img-responsive w-100" src="./assest/footer/logo.png" />
+            <img class="img-responsive w-100" src="./assest/sync-connection.png" />
           </div>
           <div class="col-12 col-lg-7">
             <p class="font-size-medium order-lg-1 text-justify p-3">
@@ -103,7 +103,7 @@
         <div class="w-100"></div>
         <div class="row no-gutters flex-row-reverse">
           <div class="col-12 col-lg-5 p-3 order-lg-2 text-center">
-            <img class="img-responsive w-100" src="./assest/footer/logo.png" />
+            <img class="img-responsive w-100" src="./assest/smart-strategy-img.png" />
           </div>
           <div class="col-12 col-lg-7">
             <p class="font-size-medium order-lg-1 text-justify p-3">
@@ -125,7 +125,7 @@
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
           <div class="square-col-contet w-100 m-0 p-0 text-center">
             <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-medium p-0 m-0">
+            <p class="font-size-normal p-0 m-0">
               تدوین استراتژی پلن یکپارچه سازی اطلاعات
             </p>
           </div>
@@ -133,7 +133,7 @@
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
           <div class="square-col-contet w-100 m-0 p-0 text-center">
             <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-medium p-0 m-0">
+            <p class="font-size-normal p-0 m-0">
               تدوین استراتژی پلن محتوایی
             </p>
           </div>
@@ -141,7 +141,7 @@
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
           <div class="square-col-contet w-100 m-0 p-0 text-center">
             <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-medium p-0 m-0">
+            <p class="font-size-normal p-0 m-0">
               تولید محتوا در غالب های مختلف
             </p>
           </div>
@@ -160,13 +160,12 @@
         <p class="font-size-medium text-center mb-5">اگر مایلید بیشتر با خدمات ما آشنا شوید، ایمیل خود را وارد کنید تا با شما تماس بگیریم.</p>
         <form class="form-inline md-form align-items-stretch flex-row-reverse mx-auto mb-4">
           <input class="form-control mr-sm-2 text-left flex-one" type="text" placeholder="آدرس پست الکترونیکی" aria-label="Search">
-          <button class="btn peach-gradient btn-rounded btn-sm smooth-rounded my-0" type="submit">تایید</button>
+          <button class="btn blue-gradient btn-rounded btn-sm smooth-rounded my-0" type="submit">تایید</button>
         </form>
       </div>    
     </div>
   </main>
   <!--Main Layout-->
-
   <!-- Footer -->
   <footer class="container text-center py-5">
     <div class="row">
@@ -201,11 +200,11 @@
       <div class="col-xs-12 col-sm-6 col-md-3 order-xs-3 order-sm-3 order-md-3 my-3 mx-auto">
         <h5 class="w-100 text-uppercase">شبکه های اجتماعی</h5>
         <div class="d-flex flex-row mt-3 mx-auto justify-content-center">
-          <a class="m-1">
+          <a class="m-1" href="https://www.linkedin.com/company/elmgraph/about/">
             <img src="./assest/footer/linkedin.png"/>
             <!-- <i class="fab fa-linkedin-in fa-lg mr-md-5 mr-3 fa-2x"> </i> -->
           </a>
-          <a class="m-1">
+          <a class="m-1" href="https://www.instagram.com/elmgraph.co/">
             <img src="./assest/footer/instagram.png"/>
             <!-- <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"> </i> -->
           </a>
