--- a/content-service.html
+++ b/content-service.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>علمـــــگراف</title>
+  <title>خدمات تولید محتوا</title>
+  <link rel=icon href="assest/footer/logo.png">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <!-- Fluent Design Bootstrap -->
@@ -482,7 +483,7 @@
         <form class="form-inline md-form align-items-stretch flex-row-reverse mx-auto mb-4">
           <input class="form-control mr-sm-2 text-left flex-one" type="text" placeholder="آدرس پست الکترونیکی"
             aria-label="Search">
-          <button class="btn peach-gradient btn-rounded btn-sm smooth-rounded my-0" type="submit">تایید</button>
+          <button class="btn blue-gradient btn-rounded btn-sm smooth-rounded my-0 font-weight-bold" type="submit">تایید</button>
         </form>
       </div>
     </div>
@@ -498,7 +499,7 @@
           <div class="my-3">
             <span>
               <i class="fas fa-phone fa-lg ml-3"></i>
-              ۰۲۱ - ۲۲۵۵۹۹۶۶
+              ۲۲۵۵۹۹۶۶ - ۰۲۱
             </span>
           </div>
           <div class="my-3">
