--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>علمـــــگراف</title>
+  <link rel=icon href="assest/footer/logo.png">
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <!-- Fluent Design Bootstrap -->
@@ -15,6 +16,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- IRANSANS -->
   <link rel="stylesheet" href="./font/IRANSans/WebFonts/css/style.css">
+  <!-- Animation -->
+  <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
   <!-- Start your project here-->
@@ -67,12 +70,14 @@
     </nav>
 
     <div class="container-fluid flex-center py-5 mt-5 main-title">
-      <div class="text-center wow fadeInUp d-flex flex-column align-items-center">
-        <img class="img-responsive" src="./assest/big-logo.png" alt="elmgraph" />
+      <div class="text-center d-flex flex-column align-items-center">
+        <img class="img-responsive wow slideInUp" src="./assest/big-logo.png" alt="elmgraph" />
         <div class="w-100"></div>
-        <h1>قدرت جادوی ارتباطات</h1>
-        <br>
-        <p class="font-size-normal font-weight-bold">ما قدرت جادوی ارتباطات را به کار میگیریم و با قطاری از واژگان، شما را به ایستگاه موفقیت میرسانیم.</p>
+        <div class="wow fadeInUp delay-1s">
+          <h1>قدرت جادوی ارتباطات</h1>
+          <br>
+          <p class="font-size-normal font-weight-bold">ما قدرت جادوی ارتباطات را به کار میگیریم و با قطاری از واژگان، شما را به ایستگاه موفقیت میرسانیم.</p>
+        </div>
       </div>
     </div>
   </header>
@@ -99,7 +104,7 @@
         <div class="w-100"></div>
         <div class="row no-gutters">
           <div class="col-12 col-lg-5 p-3 order-lg-2 text-center">
-            <img class="img-responsive w-100" src="./assest/sync-connection.png" />
+            <img class="img-responsive w-100 wow fadeInLeft" src="./assest/sync-connection.png" />
           </div>
           <div class="col-12 col-lg-7">
             <p class="font-size-medium order-lg-1 text-justify p-3">
@@ -128,7 +133,7 @@
         <div class="w-100"></div>
         <div class="row no-gutters flex-row-reverse">
           <div class="col-12 col-lg-5 p-3 order-lg-2 text-center">
-            <img class="img-responsive w-100" src="./assest/smart-strategy-img.png" />
+            <img class="img-responsive w-100 wow fadeInRight" src="./assest/smart-strategy-img.png" />
           </div>
           <div class="col-12 col-lg-7">
             <p class="font-size-medium order-lg-1 text-justify p-3">
@@ -148,27 +153,33 @@
         </div>
     
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
-          <div class="square-col-contet w-100 m-0 p-0 text-center">
-            <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-normal p-0 m-0">
-              تدوین استراتژی پلن یکپارچه سازی اطلاعات
-            </p>
+          <div class="square-col-contet w-100 m-0 p-0 text-center wow fadeInRight">
+            <a href="#contact-us" style="color: #000;">
+              <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/data-integrate-planning.png" alt="Generic placeholder image"  style="padding-bottom: 2rem;">            
+              <p class="font-size-normal p-0 m-0">
+                تدوین استراتژی پلن یکپارچه سازی اطلاعات
+              </p>
+            </a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
-          <div class="square-col-contet w-100 m-0 p-0 text-center">
-            <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-normal p-0 m-0">
-              تدوین استراتژی پلن محتوایی
-            </p>
+          <div class="square-col-contet w-100 m-0 p-0 text-center wow fadeInUp">
+            <a href="#contact-us" style="color: #000;">
+              <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/content-planning.png" alt="Generic placeholder image" style="padding-bottom: 2rem;">            
+              <p class="font-size-normal p-0 m-0">
+                تدوین استراتژی پلن محتوایی
+              </p>
+            </a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-3 square-col p-2 m-2 d-flex">
-          <div class="square-col-contet w-100 m-0 p-0 text-center">
-            <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/strategy-img.png" alt="Generic placeholder image">            
-            <p class="font-size-normal p-0 m-0">
-              تولید محتوا در غالب های مختلف
-            </p>
+          <div class="square-col-contet w-100 m-0 p-0 text-center wow fadeInLeft">
+            <a href="content-service.html" style="color: #000;">
+              <img class="d-flex mx-auto w-75 align-self-stretch" src="./assest/making-content.png" alt="Generic placeholder image"  style="padding-bottom: 2rem;">            
+              <p class="font-size-normal p-0 m-0">
+                تولید محتوا در غالب های مختلف
+              </p>
+            </a>
           </div>
         </div>
       </div>
@@ -185,7 +196,7 @@
         <p class="font-size-medium text-center mb-5">اگر مایلید بیشتر با خدمات ما آشنا شوید، ایمیل خود را وارد کنید تا با شما تماس بگیریم.</p>
         <form class="form-inline md-form align-items-stretch flex-row-reverse mx-auto mb-4">
           <input class="form-control mr-sm-2 text-left flex-one" type="text" placeholder="آدرس پست الکترونیکی" aria-label="Search">
-          <button class="btn blue-gradient btn-rounded btn-sm smooth-rounded my-0" type="submit">تایید</button>
+          <button class="btn blue-gradient btn-rounded btn-sm smooth-rounded my-0 font-weight-bold" type="submit">تایید</button>
         </form>
       </div>    
     </div>
@@ -200,7 +211,7 @@
           <div class="my-3">
             <span>
               <i class="fas fa-phone fa-lg ml-3"></i>
-              ۰۲۱ - ۲۲۵۵۹۹۶۶
+              ۲۲۵۵۹۹۶۶ - ۰۲۱
             </span>
           </div>
           <div class="my-3">
@@ -258,6 +269,10 @@
         event.stopPropagation();
       });
     });
+  </script>
+  <script src="js/wow.min.js"></script>
+  <script>
+  new WOW().init();
   </script>
 </body>
 
