--- a/content-service.html
+++ b/content-service.html
@@ -25,7 +25,7 @@
     <img class="img-responsive red-glue-image" src="./assest/red-glue.png" />
   </div>
   <!--Main Navigation-->
-  <header class="my-4">
+  <header class="my-4" id="top-section">
     <nav class="navbar navbar-expand-lg navbar-light no-shaddow">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -67,6 +67,11 @@
   <!--Main Layout-->
   <main class="text-right py-5 mt-3 p-relative">
     <div class="container clearfix">
+      <div class="fixed-action-btn smooth-scroll" style="bottom: 45px; right: 24px;">
+        <a href="#top-section" class="btn-floating btn-large red">
+          <i class="fas fa-arrow-up"></i>
+        </a>
+      </div>
       <div class="row">
         <div class="col-12 my-3 mt-5 text-blue">
           <h1>خدمات تولید محتوا در قالب های مختلف</h1>
@@ -454,12 +459,6 @@
         <div class="mt-3">
           <div class="my-3">
             <span>
-              <i class="fas fa-map-marker-alt fa-lg ml-3"></i>
-              ایران، تهران، طالقانی، پلاک ۳۰، واحد ۱۲
-            </span>
-          </div>
-          <div class="my-3">
-            <span>
               <i class="fas fa-phone fa-lg ml-3"></i>
               ۰۲۱ - ۲۲۵۵۹۹۶۶
             </span>
@@ -479,7 +478,7 @@
 
       <div class="col-xs-12 col-sm-6 col-md-3 order-xs-3 order-sm-3 order-md-3 my-3 mx-auto">
         <h5 class="w-100 text-uppercase">شبکه های اجتماعی</h5>
-        <div class="d-flex flex-row mt-3 mx-auto justify-content-center">
+        <div class="d-flex flex-row mt-3 mx-auto justify-content-evenly">
           <a class="m-1">
             <img src="./assest/footer/linkedin.png" />
             <!-- <i class="fab fa-linkedin-in fa-lg mr-md-5 mr-3 fa-2x"> </i> -->
@@ -487,10 +486,6 @@
           <a class="m-1">
             <img src="./assest/footer/instagram.png" />
             <!-- <i class="fab fa-instagram fa-lg mr-md-5 mr-3 fa-2x"> </i> -->
-          </a>
-          <a class="m-1">
-            <img src="./assest/footer/facebook.png" />
-            <!-- <i class="fab fa-facebook-f fa-lg mr-md-5 mr-3 fa-2x"> </i> -->
           </a>
         </div>
       </div>
