elmgraph mobile menu background color changed

--- a/content-service.html
+++ b/content-service.html
@@ -31,10 +31,29 @@
         <a class="navbar-brand" href="#">
           <h2><strong>علمـــــگراف</strong></h2>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
+
+        <div class="open d-block d-lg-none">
+          <span class="cls"></span>
+          <span>
+            <ul class="sub-menu ">
+              <li>
+                <a href="#our-service" title="about">خدمات</a>
+              </li>
+              <li>
+                <a href="#solutions" title="skills">راهکار ها</a>
+              </li>
+              <li>
+                <a href="#contact-us" title="jobs">تماس با ما</a>
+              </li>
+            </ul>
+          </span>
+          <span class="cls"></span>
+        </div>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item mx-3">
@@ -105,7 +124,8 @@
                   طراحی نشان و برند
                 </h6>
                 <p class="card-text center-justified">
-                  پیش از آنکه طراحی نشان و برند شما را آغاز کنیم، درک نام تجاری و پژوهش پیرامون نحوه بهترین شیوه انتقال پیام مجموعه شما به مخاطبان از طریق این نشان، وظیفه دپارتمان گرافیک عملگراف می‌باشد.
+                  پیش از آنکه طراحی نشان و برند شما را آغاز کنیم، درک نام تجاری و پژوهش پیرامون نحوه بهترین شیوه انتقال
+                  پیام مجموعه شما به مخاطبان از طریق این نشان، وظیفه دپارتمان گرافیک عملگراف می‌باشد.
                 </p>
               </div>
             </a>
@@ -121,7 +141,8 @@
                   تولید پادکست
                 </h6>
                 <p class="card-text center-justified">
-                  پادکست نیز استاندارد، سناریو، فرم و تکنیک‌های خاص خود را در تولید و نشر صحیح و کاربردی دارد. ما با بهره‌گیری از نویسندگان و گویندگان حرفه‌ای این قالب از محتوا را تولید می‌کنیم.
+                  پادکست نیز استاندارد، سناریو، فرم و تکنیک‌های خاص خود را در تولید و نشر صحیح و کاربردی دارد. ما با
+                  بهره‌گیری از نویسندگان و گویندگان حرفه‌ای این قالب از محتوا را تولید می‌کنیم.
                 </p>
               </div>
             </a>
@@ -137,7 +158,8 @@
                   مصورسازی داده‌ها
                 </h6>
                 <p class="card-text center-justified">
-                  مصورسازی اطلاعات، ارائه داده‌ها در فرمت تصویری و گرافیکی است که ما با تجسم کردن گزارشات شما باعث می‌شویم تا همواره یک گام جلوتر از سایرین باشید.
+                  مصورسازی اطلاعات، ارائه داده‌ها در فرمت تصویری و گرافیکی است که ما با تجسم کردن گزارشات شما باعث
+                  می‌شویم تا همواره یک گام جلوتر از سایرین باشید.
                 </p>
               </div>
             </a>
@@ -153,7 +175,8 @@
                   تحلیل
                 </h6>
                 <p class="card-text center-justified">
-                  عملگراف با تکیه بر قلم کارشناسان و صاحب نظران خود در حوزه‌های گوناگون، تحلیل و پویش‌های موردنظر شما را انجام خواهد داد.
+                  عملگراف با تکیه بر قلم کارشناسان و صاحب نظران خود در حوزه‌های گوناگون، تحلیل و پویش‌های موردنظر شما
+                  را انجام خواهد داد.
                 </p>
               </div>
             </a>
@@ -169,7 +192,8 @@
                   طراحی UI و UX
                 </h6>
                 <p class="card-text center-justified">
-                  یکی از پارامتر‌های موثر در ارتباط بین مخاطب و وبسایت از طریق UI و UX  مناسب است.عملگراف با استفاده از تیمی مجرب در این زمینه تمامی خدمات مربوط به آن را انجام می‌دهد.
+                  یکی از پارامتر‌های موثر در ارتباط بین مخاطب و وبسایت از طریق UI و UX مناسب است.عملگراف با استفاده از
+                  تیمی مجرب در این زمینه تمامی خدمات مربوط به آن را انجام می‌دهد.
                 </p>
               </div>
             </a>
@@ -185,7 +209,8 @@
                   نگارش بیانیه و جوابیه
                 </h6>
                 <p class="card-text center-justified">
-                  زمانی می‌رسد که سازمان شما باید برای تنویر افکار عمومی و ایجاد شفافیت با مخاطبان خود ارتباط برقرار کند. نگارش صحیح یک بیانیه یا جوابیه را به کارشناسان علمگراف واگذار نمایید.
+                  زمانی می‌رسد که سازمان شما باید برای تنویر افکار عمومی و ایجاد شفافیت با مخاطبان خود ارتباط برقرار
+                  کند. نگارش صحیح یک بیانیه یا جوابیه را به کارشناسان علمگراف واگذار نمایید.
                 </p>
               </div>
             </a>
@@ -201,7 +226,8 @@
                   طراحی ست اداری
                 </h6>
                 <p class="card-text center-justified">
-                  اگر به برند خود اهمیت می‌دهید حتما باید به طراحی ست‌های اداری توجه ویژه‌ای داشته باشید. ما این خدمات را به طور کامل با استفاده از طراحان خبره خود انجام می‌دهیم.
+                  اگر به برند خود اهمیت می‌دهید حتما باید به طراحی ست‌های اداری توجه ویژه‌ای داشته باشید. ما این خدمات
+                  را به طور کامل با استفاده از طراحان خبره خود انجام می‌دهیم.
                 </p>
               </div>
             </a>
@@ -217,7 +243,8 @@
                   مدیریت شبکه‌های اجتماعی
                 </h6>
                 <p class="card-text center-justified">
-                  تیم ما تمامی شبکه‌های اجتماعی شما را به بهترین نحو و با روش‌های جذاب به منظور ارائه هدفمند و دقیق، مدیریت و کنترل خواهد کرد.
+                  تیم ما تمامی شبکه‌های اجتماعی شما را به بهترین نحو و با روش‌های جذاب به منظور ارائه هدفمند و دقیق،
+                  مدیریت و کنترل خواهد کرد.
                 </p>
               </div>
             </a>
@@ -233,7 +260,8 @@
                   مانیتورینگ رسانه‌ها
                 </h6>
                 <p class="card-text center-justified">
-                  ما با تیمی کاوشگر در پهنای اطلاعات و گزاره‌های خبری، که هر روزه در سرتاسر فضای مجازی منتشر می‌شوند به تحلیل‌هایی حرفه‌ای برای شما می‌پردازیم.
+                  ما با تیمی کاوشگر در پهنای اطلاعات و گزاره‌های خبری، که هر روزه در سرتاسر فضای مجازی منتشر می‌شوند به
+                  تحلیل‌هایی حرفه‌ای برای شما می‌پردازیم.
                 </p>
               </div>
             </a>
@@ -249,7 +277,8 @@
                   تولید جزوات آموزشی
                 </h6>
                 <p class="card-text center-justified">
-                  ما برای آموزش نیروی کارآمد در بخش‌های گوناگون ارتباطی، با بررسی فرایند‌ها و نیاز‌های مجموعه شما، اقدام به تولید محتوای آموزشی می‌کنیم.
+                  ما برای آموزش نیروی کارآمد در بخش‌های گوناگون ارتباطی، با بررسی فرایند‌ها و نیاز‌های مجموعه شما،
+                  اقدام به تولید محتوای آموزشی می‌کنیم.
                 </p>
               </div>
             </a>
@@ -265,7 +294,8 @@
                   تولید کاتالوگ و نشریه
                 </h6>
                 <p class="card-text center-justified">
-                  کاتالوگ، شناسنامه برند شما است. اهمیت به کاتالوگ و طراحی مناسب آن میتواند نقش مهمی را در معرفی بند شما ایفا کند.
+                  کاتالوگ، شناسنامه برند شما است. اهمیت به کاتالوگ و طراحی مناسب آن میتواند نقش مهمی را در معرفی بند
+                  شما ایفا کند.
                 </p>
               </div>
             </a>
@@ -281,7 +311,8 @@
                   اینفوگرافیک
                 </h6>
                 <p class="card-text center-justified">
-                  اینفوگرافیک بهترین روش برای انتقال پیام به صورت جامع و خلاصه است. ما با خلاقیتی خاص، طبق ذائقه مخاطبان شما، این فعالیت را به ثمر می‌رسانیم.
+                  اینفوگرافیک بهترین روش برای انتقال پیام به صورت جامع و خلاصه است. ما با خلاقیتی خاص، طبق ذائقه
+                  مخاطبان شما، این فعالیت را به ثمر می‌رسانیم.
                 </p>
               </div>
             </a>
@@ -314,7 +345,8 @@
                   طراحی گرافیک
                 </h6>
                 <p class="card-text center-justified">
-                  طراحی کاور‌های منحصر‌به‌فرد برای هر مطلب، طراحی پوستر برای رویداد‌های مهم و ... توسط تیم طراحی گرافیک علمگراف.
+                  طراحی کاور‌های منحصر‌به‌فرد برای هر مطلب، طراحی پوستر برای رویداد‌های مهم و ... توسط تیم طراحی گرافیک
+                  علمگراف.
                 </p>
               </div>
             </a>
@@ -330,7 +362,8 @@
                   نظرسنجی و آمار
                 </h6>
                 <p class="card-text center-justified">
-                  به منظور جمع‌اوری داده‌ها به صورت نظرسنجی و پس از آن، داده‌پردازی و آنالیز دقیق آن‌ها، تیمی توانمند را گرد هم آورده‌ایم.
+                  به منظور جمع‌اوری داده‌ها به صورت نظرسنجی و پس از آن، داده‌پردازی و آنالیز دقیق آن‌ها، تیمی توانمند
+                  را گرد هم آورده‌ایم.
                 </p>
               </div>
             </a>
@@ -346,7 +379,8 @@
                   گزارش مکتوب
                 </h6>
                 <p class="card-text center-justified">
-                  همایش‌ها و نشست‌های خبری را نمی‌توان صرفاً تبدیل به خبر کرد. شیوه انتقال بهتر این فعالیت‌ها برای مخاطبین، شیوه گزارش‌نویسی است.
+                  همایش‌ها و نشست‌های خبری را نمی‌توان صرفاً تبدیل به خبر کرد. شیوه انتقال بهتر این فعالیت‌ها برای
+                  مخاطبین، شیوه گزارش‌نویسی است.
                 </p>
               </div>
             </a>
@@ -362,7 +396,8 @@
                   ریپورتاژ آگهی
                 </h6>
                 <p class="card-text center-justified">
-                  ما با شناسایی وبسایت‌های مناسب، بالقوه و مرتبط با برند و همچنین تبلیغ در آن‌ها با روشی جذاب، شما را به بهترین نحو به مخاطبانتان معرفی خواهیم کرد.
+                  ما با شناسایی وبسایت‌های مناسب، بالقوه و مرتبط با برند و همچنین تبلیغ در آن‌ها با روشی جذاب، شما را
+                  به بهترین نحو به مخاطبانتان معرفی خواهیم کرد.
                 </p>
               </div>
             </a>
@@ -378,7 +413,8 @@
                   تولید خبر
                 </h6>
                 <p class="card-text center-justified">
-                  انجام فعالیت‌هایی نظیر رصد، ترجمه و تولید محتوای خبری، از جمله توانایی‌های علمگراف است که با پشتوانه متخصصان روزنامه‌نگار و رسانه‌ای انجام می‌پذیرد.
+                  انجام فعالیت‌هایی نظیر رصد، ترجمه و تولید محتوای خبری، از جمله توانایی‌های علمگراف است که با پشتوانه
+                  متخصصان روزنامه‌نگار و رسانه‌ای انجام می‌پذیرد.
                 </p>
               </div>
             </a>
@@ -410,7 +446,8 @@
                   ترجمه
                 </h6>
                 <p class="card-text center-justified">
-                  علمگراف با دارا بودن تیمی حرفه‌ای در زمینه ترجمه متن، صدا و فیلم از زبان‌های انگلیسی، فرانسه، ایتالیایی، آلمانی و عربی آماده خدمت‌رسانی به تمامی مخاطبان است.
+                  علمگراف با دارا بودن تیمی حرفه‌ای در زمینه ترجمه متن، صدا و فیلم از زبان‌های انگلیسی، فرانسه،
+                  ایتالیایی، آلمانی و عربی آماده خدمت‌رسانی به تمامی مخاطبان است.
                 </p>
               </div>
             </a>
@@ -426,7 +463,8 @@
                   گزارش تصویری
                 </h6>
                 <p class="card-text center-justified">
-                  با عکاسان توانمند و ماهر تیم تحریریه علمگراف، لحظات رویداد‌های شما را به تصویر می‌کشیم و قالب عکس خبری منتشر خواهیم کرد.
+                  با عکاسان توانمند و ماهر تیم تحریریه علمگراف، لحظات رویداد‌های شما را به تصویر می‌کشیم و قالب عکس
+                  خبری منتشر خواهیم کرد.
                 </p>
               </div>
             </a>
@@ -503,6 +541,21 @@
   <script type="text/javascript" src="./js/bootstrap.min.js"></script>
   <!-- MDB JavaScript -->
   <script type="text/javascript" src="./js/mdb.js"></script>
+  <script>
+    $(document).ready(function() {
+      $(document).delegate('.open', 'click', function(event){
+        $(this).addClass('oppenned');
+        event.stopPropagation();
+      })
+      $(document).delegate('body', 'click', function(event) {
+        $('.open').removeClass('oppenned');
+      })
+      $(document).delegate('.cls', 'click', function(event){
+        $('.open').removeClass('oppenned');
+        event.stopPropagation();
+      });
+    });
+  </script>
 </body>
 
 </html>
