red-glue removed on mobile in content-service page

--- a/content-service.html
+++ b/content-service.html
@@ -21,7 +21,7 @@
 
 <body>
   <!-- Start your project here-->
-  <div class="red-glue">
+  <div class="red-glue d-none d-md-block">
     <img class="img-responsive red-glue-image" src="./assest/red-glue.png" />
   </div>
   <!--Main Navigation-->
